# simCataloguer

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: obama_sotu.txt  test_writer.py
make_writer/: __init__.py
simCataloguer/: __init__.py
