[tool.poetry]
name = "make-writer"
version = "0.1.0"
description = ""
authors = ["mark-todd <markpeter.todd@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
gpt-2-simple = "^0.8.1"
pixray-module = {path = "modules/pixray"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"
